# Individual_Project_2

./: Cargo.toml  Diabetes.db  README.md
.github/workflows/: rustfmt.yml
src/: Diabetes.db  lib.rs  main.rs
