[package]
name = "rust-sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.12"
clap = "2.33"
csv = "1.1"
reqwest = "0.11"
rusqlite = "0.26"
tokio = { version = "1.0", features = ["full"] }
